--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
 
     <string name="up">Up</string>
 
+    <string name="transition_photo">TransitionPhoto</string>
+
     <string name="content_loading">Please hold for seconds, content is loading....</string>
 </resources>
